--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,1 +1,17 @@
-.venv
+### IDE ###
+.idea
+.vscode
+
+### Cache ###
+__pycache__
+.ruff_cache
+*.py[cod]
+
+### Environment ###
+.env
+settings.yaml
+private.pem
+public.pem
+
+### OS ###
+.DS_Store
