--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,5 +5,16 @@ description = "Add your description here"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.116.1",
+    "ruff>=0.12.11",
     "sqlalchemy>=2.0.43",
 ]
+
+[tool.ruff]
+line-length = 120
+lint.ignore = [
+    # wildcard imports are fine
+    "F403",
+    "F405",
+    "PLR"
+]
+lint.extend-select = ["I", "UP", "PL"]
