chore: refactor repositories to avoid global variables

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -31,3 +31,9 @@ lint.ignore = [
     "PLR"
 ]
 lint.extend-select = ["I", "UP", "PL"]
+exclude = [
+    ".git",
+    ".venv",
+    "venv",
+    "alembic",
+]
