--- a/backend/settings.example.yaml
+++ b/backend/settings.example.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=settings.schema.yaml
 $schema: "./settings.schema.yaml"
 api_settings:
   db_url: "postgresql+asyncpg://postgres:postgres@localhost:5432/postgres"
