--- a/backend/settings.example.yaml
+++ b/backend/settings.example.yaml
@@ -4,3 +4,6 @@ api_settings:
   db_url: "postgresql+asyncpg://postgres:postgres@localhost:5432/postgres"
   secret_key: ""  # use `openssl rand -hex 32` to generate a random key
   token_expiration_in_minutes: 60
+open_ai_text_settings:
+  api_key: ""
+  model: "gpt-5-mini"
