--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "pyyaml>=6.0.2",
     "ruff>=0.12.11",
     "sqlalchemy>=2.0.43",
+    "unoserver>=3.3.2",
     "uvicorn>=0.35.0",
 ]
 
