--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,8 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.476.0",
+    "next-themes": "^0.4.6",
+    "openapi-react-query": "^0.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
