--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,40 +22,41 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
-    "@tailwindcss/vite": "^4.0.6",
+    "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-devtools": "^0.2.2",
-    "@tanstack/react-query": "^5.66.5",
-    "@tanstack/react-query-devtools": "^5.84.2",
-    "@tanstack/react-router": "^1.130.2",
-    "@tanstack/react-router-devtools": "^1.131.5",
-    "@tanstack/router-plugin": "^1.121.2",
-    "@types/node": "^24.3.0",
+    "@tanstack/react-query": "^5.87.1",
+    "@tanstack/react-query-devtools": "^5.87.1",
+    "@tanstack/react-router": "^1.131.35",
+    "@tanstack/react-router-devtools": "^1.131.35",
+    "@tanstack/router-plugin": "^1.131.35",
+    "@types/node": "^24.3.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.476.0",
     "next-themes": "^0.4.6",
+    "openapi-fetch": "^0.14.0",
     "openapi-react-query": "^0.5.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
-    "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.6",
-    "tw-animate-css": "^1.3.6",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.13",
+    "tw-animate-css": "^1.3.8",
     "zod": "^4.1.5"
   },
   "devDependencies": {
-    "@tanstack/router-cli": "^1.131.28",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/react": "^16.2.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.3.4",
-    "jsdom": "^26.0.0",
+    "@tanstack/router-cli": "^1.131.35",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^4.7.0",
+    "jsdom": "^26.1.0",
     "openapi-typescript": "^7.9.1",
-    "typescript": "^5.7.2",
+    "typescript": "^5.9.2",
     "vite": "^6.3.5",
-    "vitest": "^3.0.5",
+    "vitest": "^3.2.4",
     "web-vitals": "^4.2.4"
   }
 }
