--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "openai>=1.105.0",
     "passlib>=1.7.4",
     "pydantic[email]>=2.11.7",
+    "pypdf2>=3.0.1",
     "python-jose>=3.5.0",
     "python-multipart>=0.0.20",
     "pyyaml>=6.0.2",
