--- a/backend/settings.example.yaml
+++ b/backend/settings.example.yaml
@@ -11,3 +11,5 @@ open_ai_text_settings:
   model: "gpt-5-mini"
 open_ai_realtime_settings:
   model: "gpt-realtime"
+  transcription_model: "gpt-4o-mini-transcribe"
+  language: "ru"
