--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "alembic>=1.16.5",
     "asyncpg>=0.30.0",
     "bcrypt>=4.3.0",
+    "beautifulsoup4>=4.13.5",
     "colorlog>=6.9.0",
     "fastapi>=0.116.1",
     "fastapi-derive-responses>=0.1.4",
