--- a/frontend/components.json
+++ b/frontend/components.json
@@ -11,11 +11,11 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "@/components",
-    "utils": "@/lib/utils",
-    "ui": "@/components/ui",
+    "components": "src/components",
+    "utils": "src/lib/utils",
+    "ui": "src/components/ui",
     "lib": "@/lib",
-    "hooks": "@/hooks"
+    "hooks": "src/hooks"
   },
   "iconLibrary": "lucide"
 }
