--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.476.0",
     "next-themes": "^0.4.6",
+    "ogl": "^1.0.11",
     "openapi-fetch": "^0.14.0",
     "openapi-react-query": "^0.5.0",
     "react": "^19.1.1",
