--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "ogl": "^1.0.11",
     "openapi-fetch": "^0.14.0",
     "openapi-react-query": "^0.5.0",
+    "prettier": "^3.6.2",
     "react": "^19.1.1",
     "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.1",
